# fusion-hero-os

./: .REST_API_CONFIG  .dockerignore  .env.example  .gcloudignore  .gitignore  .gitkeep  .gitmodules  BEST_VERSION.md  BRANCH_STRATEGY.md  CORE_ANCHOR_v7.4.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FUSION_HERO_OS_v1.2.md  FUSION_HERO_OS_v7.4_COMPLETE_DELTA_SUMMARY.md  FUSION_HERO_OS_v7.5_MASTER_UNIFIED.md  Fusion_MasterSeed_v7.11.md  Gott_Layering_v11_TopDown_Herleitung.md  LAYER_OMEGA_Tailscale_Mesh_Bifurcation_Directive_2026-07-15.md  LICENSE  MASTERSEED_UPDATE_INSTRUCTION_v8.md  PMS.yaml  PUBLIC_STATUS.md  README.md  SENFKORN_UG_TopDown_Propagation_Layer_Definition_v10.1.md  STORAGE_VAULT.md  Visual Studio Code.lnk  _diss_inv.py  alpha_meister_hasch.md  alpha_meister_hasch.seal.json  api_planes.yaml  app.py  apply-storage-policy.ps1  architecture.md  auto_save.ps1  browser_egress.yaml  build_system.sh  console_outputs_2026-06-30.md  control_instances.yaml  creative_inhouse_services.yaml  (+76 more)
01_Framework/: SKILL.md
02_Mathematik/: qb_qubo.py  qubo_qdrant_cache.py  requirements.txt
03_Code/: Anhang_A_Korpus_und_Formalisierungs_Audit.docx  TokenManagementSystem.py  audit_agent.py  dynamic_orchestration_core.py  heroic_orchestration.py  llm_status.py  model_connectors.py  timespace_token_management.py
06_Master_Archive/: 00_ALLE_AUSFUEHREN_Gesamtsynthese_MasterSeed_v7.5.md
LongTermCache/: vcache_1000.cache
QuboCache/: blockchain.json  blockchain_test.json  ledger.json  miner_identity.pem  miner_optimizer_state.json  prob_1782672092_problem.json  prob_1782672092_solution.json  prob_1782672106_solution.json  prob_1782672113_solution.json  prob_1782672122_problem.json  prob_1782672127_solution.json  prob_1782672131_problem.json  prob_1782672131_solution.json  prob_1782672136_problem.json  prob_1782672146_problem.json  prob_1782672156_problem.json  prob_1782672161_problem.json  prob_1782672161_solution.json  prob_1782672166_problem.json  prob_1782672171_problem.json  prob_1782672175_problem.json  prob_1782672190_problem.json  prob_1782672190_solution.json  prob_1782672195_problem.json  prob_1782672204_problem.json  prob_1782672204_solution.json  prob_1782672209_problem.json  prob_1782672214_problem.json  prob_1782672214_solution.json  prob_1782672219_solution.json  prob_1782672224_problem.json  prob_1782672224_solution.json  prob_1782672229_problem.json  prob_1782672229_solution.json  prob_1782672234_solution.json  prob_1782672243_problem.json  prob_1782672248_problem.json  prob_1782672248_solution.json  prob_1782672253_solution.json  prob_1782672258_solution.json  (+417 more)
__pycache__/: qb_qubo._sa_kernel_trace-234.py310.1.nbc  qb_qubo._sa_kernel_trace-237.py310.nbi  qb_qubo._simulated_annealing_kernel-159.py310.1.nbc  qb_qubo._simulated_annealing_kernel-159.py310.nbi  qb_qubo._simulated_annealing_kernel-203.py310.1.nbc
_archive_meta/: README.md
archiv/: README.md
archive/: README.md  v7.4_migration_notes.md
artifacts/: 2026-07-15_Hyper4D_CoEvolutionary_Update.md  2026-07-15_autopoietische_dissertation_LAYER_OMEGA_propagiert.md  2026-07-16_l3_orchestration_task.md  peer_review.py  (+15 more)
legacy_sources/normalOS/: license.txt  pyproject.toml
legacy_sources/normalOS/src/normal_os/: __init__.py  structured_output.py
legacy_sources/normalOS/src/normal_os/agents/: base.py  connector_agent.py  example_agents.py  registry.py
legacy_sources/normalOS/src/normal_os/bridge/: __init__.py  grok_pc_bridge.py
legacy_sources/normalOS/src/normal_os/cli/: main.py
legacy_sources/normalOS/src/normal_os/connectors/: __init__.py  base.py  github_connector.py  google_drive_connector.py  notion_connector.py  registry.py
legacy_sources/normalOS/src/normal_os/core/: coevolution.py  config.py  models.py  orchestrator.py
legacy_sources/normalOS/src/normal_os/dashboard/templates/partials/: task_list.html
legacy_sources/normalOS/src/normal_os/executor/: worker_pool.py
legacy_sources/normalOS/src/normal_os/llm/: router.py
legacy_sources/normalOS/src/normal_os/optimization/: advanced_qubo.py  qubo_solver.py
legacy_sources/normalOS/src/normal_os/persistence/: faden_store.py  task_store.py
legacy_sources/normalOS/workstation/: .env.example  Link-All.bat  README.txt  Start-normalOS.bat  Status-normalOS.bat  desktop-manifest.json  link-all.ps1  load-env.ps1  load-vr.ps1  paths.json  restore-desktop.ps1  start-normalos.ps1  status.ps1  tailscale-account-check.ps1
main-knoten-proofs/: proof_registry.yaml  pyproject.toml
main-knoten-proofs/02_Mathematik/: qb_qubo.py
main-knoten-proofs/03_Code/: StarrLernenderAntiLoopGuardCoreModule_v1.py
main-knoten-proofs/03_Code/Dashboard/: .gitignore  app.py  connectivity.py  fusion_settings.py  supabase_background.py  watch_sync_server.py
main-knoten-proofs/03_Code/Dashboard/backends/: base.py
main-knoten-proofs/03_Code/Dashboard/gui/: layer_panels.py
main-knoten-proofs/03_Code/Dashboard/scripts/: improve_geisteskrankheiten_4d.py
main-knoten-proofs/03_Code/Dashboard/skins/: matrix_core.json
main-knoten-proofs/03_Code/Dashboard/static/: fusion_drag.js  style.css
main-knoten-proofs/03_Code/Dashboard/templates/: watch.html
main-knoten-proofs/03_Code/core/: resource_workflow.py  session_handover_node.py
main-knoten-proofs/docs/04_execution/: PMS_OPERATOR_CATALOG_v7.5.md
main-knoten-proofs/docs/Heroismus/: Axiom_IV_Die_rekursive_Closure.md
main-knoten-proofs/docs/agent_context/claude_memory/: MEMORY.md  github-repos.md
main-knoten-proofs/docs/v8/: FULL_APRIL_THEMENFELDER_OS_ARCHITECTURE_INTEGRATION_v8.md
main-knoten-proofs/docs/v8/architecture/: FULL_OS_Themenfelder_Integration_April_Mai_Juni_v8.md
main-knoten-proofs/journal/: __init__.py
main-knoten-proofs/tests/: test_connectivity.py  test_inference_scheduler_qubo.py  test_masterseed_semilattice.py
pms_rust_kernel_crate/: Cargo.toml
pms_rust_kernel_crate/src/: main.rs
rust_engine_crate/: Cargo.toml  pyproject.toml
rust_engine_crate/src/: lib.rs
src/normal_os/rust/rust_engine_crate/: Cargo.toml  pyproject.toml
src/normal_os/rust/rust_engine_crate/src/: lib.rs
(+2510 files in other folders)
