[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascension-os"
version = "8.3.0"
description = "AscensionOS - Fusion Hero OS Coevolutionary Variant (CEC, Persistent Sisyphos, AscensionCore, Heroic Core, Kernel AI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "dimod>=0.12.0",
    "dwave-neal>=0.6.0",
    "numpy>=1.24.0",
    "numba>=0.59.0",
    "qdrant-client>=1.18.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "anyio>=4.0.0",
    "structlog>=24.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "google-generativeai>=0.8.0",
    "openai>=1.30.0",
    "mistralai>=0.6.0",
    "huggingface-hub>=0.22.0",
]
[project.optional-dependencies]
dev = ["ruff>=0.5.0", "mypy>=1.10.0", "pre-commit>=3.6.0"]
gpu = ["torch>=2.3.0", "accelerate>=0.30.0"]
full = ["redis>=5.0.0", "prometheus-client>=0.19.0"]
[project.scripts]
ascension = "normal_os.cli.main:app"
ascension-bridge = "normal_os.bridge.grok_pc_bridge:main"
ascension-dashboard = "normal_os.dashboard.app:run"
ascension-hub = "normal_os.integration.fusion_integration_hub:main"
[tool.setuptools.packages.find]
where = ["src", "."]
include = ["normal_os*", "fusion_hero_os*"]
exclude = ["tests*", "legacy_sources*"]
[tool.ruff]
target-version = "py311"
line-length = 100
[tool.mypy]
python_version = "3.11"
