[project]
name = "normal-os"
version = "0.5.0"
description = "Clean, production-ready orchestration and optimization platform (March 2026 style)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "dimod>=0.12.0",
    "nealsamplers>=0.6.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[project.scripts]
normalos = "normal_os.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100