[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"
description = "Hochperformanter QUBO Simulated-Annealing-Kernel (PyO3) für Fusion Hero OS"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
